@@ -1,8 +1,8 @@
-package com.amanda.blog.controller;
+package com.amanda.blog.controllers;
 
-import com.amanda.blog.domain.Post;
-import com.amanda.blog.domain.User;
-import com.amanda.blog.dto.UserDTO;
+import com.amanda.blog.dtos.UserDTO;
+import com.amanda.blog.entities.Post;
+import com.amanda.blog.entities.User;
 import com.amanda.blog.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -11,7 +11,6 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users")
@@ -23,14 +22,13 @@ public class UserController {
     @GetMapping
     public ResponseEntity<List<UserDTO>> findAll() {
         List<User> list = service.findAll();
-        List<UserDTO> listDto = list.stream().map(x -> new UserDTO(x)).collect(Collectors.toList());
+        List<UserDTO> listDto = list.stream().map(UserDTO::new).toList();
         return ResponseEntity.ok(listDto);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<UserDTO> findById(@PathVariable String id) {
-        User obj = service.findById(id);
-        return ResponseEntity.ok().body(new UserDTO(obj));
+        return ResponseEntity.ok(new UserDTO(service.findById(id)));
     }
 
     @PostMapping
@@ -49,15 +47,14 @@ public class UserController {
 
     @PutMapping("/{id}")
     public ResponseEntity<Void> upDate(@RequestBody UserDTO userDTO, @PathVariable String id) {
-        User obj = service.fromDTO(userDTO);
-        obj.setId(id);
-        obj = service.update(obj);
+        User user = service.fromDTO(userDTO);
+        user.setId(id);
+        service.update(user);
         return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/{id}/posts")
     public ResponseEntity<List<Post>> findPosts(@PathVariable String id) {
-        User obj = service.findById(id);
-        return ResponseEntity.ok().body(obj.getPost());
+        return ResponseEntity.ok(service.findById(id).getPost());
     }
 }
